# AIEmbedded

./: .gitignore  README.md
EAI/lab1-2/: tflite_yolo_picam.py
team_project/: CMakeLists.txt  main.cpp  send_speed.py
team_project/build1/: CMakeCache.txt  Makefile  analyze.py  cmake_install.cmake  log copy.csv  log.csv  log2.csv  log_test.csv  measurment.py  plot_log.py  true_risk.csv  ttc_false_alarm.csv  ttc_miss.csv  ultrasonic_alarm
team_project/sensors/: buzzer  buzzer.cpp  buzzer.hpp  hall_sensor  hall_sensor.cpp  hall_sensor.hpp  lcd  lcd.cpp  lcd.hpp  ultrasonic  ultrasonic.cpp  ultrasonic.hpp
